feat(intellij): Prepare for marketplace publishing
- Filter GraalJS/Truffle warnings from debug console output
- Use green play icons for scenarios in Feature Explorer
- Add JVM flags to suppress deprecated API warnings
- Add marketplace screenshots (GIFs and PNGs)
- Generate signing certificates (not committed)